Fix Extra White Space

--- a/repo/style.css
+++ b/repo/style.css
@@ -63,6 +63,7 @@ body {
 }
 
 #FeaturedBannersView {
+    box-sizing: border-box;
     width: 100%;
     margin-bottom: 8px;
     margin-top: 8px;
